Meta_3/uccompiler.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionsAndDeclarations FunctionDefinition
    6                         | FunctionsAndDeclarations FunctionDeclaration
    7                         | FunctionsAndDeclarations Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration

   18 ParameterDeclaration: ParameterDeclaration COMMA ParameterDeclaration
   19                     | TypeSpec ID
   20                     | TypeSpec

   21 Declaration: TypeSpec Declarator SEMI
   22            | error SEMI

   23 TypeSpec: CHAR
   24         | INT
   25         | VOID
   26         | SHORT
   27         | DOUBLE

   28 Declarator: Declarator COMMA Declarator
   29           | ID
   30           | ID ASSIGN Expr

   31 Statement: Expr SEMI
   32          | SEMI
   33          | LBRACE Statlist RBRACE
   34          | LBRACE RBRACE
   35          | IF LPAR Expr RPAR ErrorOrStatement
   36          | IF LPAR Expr RPAR ErrorOrStatement ELSE ErrorOrStatement
   37          | WHILE LPAR Expr RPAR ErrorOrStatement
   38          | RETURN Expr SEMI
   39          | RETURN SEMI
   40          | LBRACE error RBRACE

   41 ErrorOrStatement: Statement
   42                 | error SEMI

   43 Statlist: Statlist ErrorOrStatement
   44         | ErrorOrStatement

   45 Expr: Expr ASSIGN Expr
   46     | Expr COMMA Expr
   47     | Expr PLUS Expr
   48     | Expr MINUS Expr
   49     | Expr MUL Expr
   50     | Expr DIV Expr
   51     | Expr MOD Expr
   52     | Expr OR Expr
   53     | Expr AND Expr
   54     | Expr BITWISEAND Expr
   55     | Expr BITWISEOR Expr
   56     | Expr BITWISEXOR Expr
   57     | Expr EQ Expr
   58     | Expr NE Expr
   59     | Expr LE Expr
   60     | Expr GE Expr
   61     | Expr LT Expr
   62     | Expr GT Expr
   63     | PLUS Expr
   64     | MINUS Expr
   65     | NOT Expr
   66     | ID LPAR RPAR
   67     | ID LPAR ExprOnCall RPAR
   68     | ID
   69     | INTLIT
   70     | CHRLIT
   71     | REALLIT
   72     | LPAR Expr RPAR
   73     | ID LPAR error RPAR
   74     | LPAR error RPAR

   75 ExprOnCall: ExprOnCall ASSIGN ExprOnCall
   76           | ExprOnCall COMMA ExprOnCall
   77           | ExprOnCall PLUS ExprOnCall
   78           | ExprOnCall MINUS ExprOnCall
   79           | ExprOnCall MUL ExprOnCall
   80           | ExprOnCall DIV ExprOnCall
   81           | ExprOnCall MOD ExprOnCall
   82           | ExprOnCall OR ExprOnCall
   83           | ExprOnCall AND ExprOnCall
   84           | ExprOnCall BITWISEAND ExprOnCall
   85           | ExprOnCall BITWISEOR ExprOnCall
   86           | ExprOnCall BITWISEXOR ExprOnCall
   87           | ExprOnCall EQ ExprOnCall
   88           | ExprOnCall NE ExprOnCall
   89           | ExprOnCall LE ExprOnCall
   90           | ExprOnCall GE ExprOnCall
   91           | ExprOnCall LT ExprOnCall
   92           | ExprOnCall GT ExprOnCall
   93           | PLUS ExprOnCall
   94           | MINUS ExprOnCall
   95           | NOT ExprOnCall
   96           | ID LPAR RPAR
   97           | ID LPAR ExprOnCall RPAR
   98           | ID
   99           | INTLIT
  100           | CHRLIT
  101           | REALLIT
  102           | LPAR Expr RPAR
  103           | ID LPAR error RPAR
  104           | LPAR error RPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 22 40 42 73 74 103 104
BITWISEAND (258) 54 84
BITWISEOR (259) 55 85
BITWISEXOR (260) 56 86
AND (261) 53 83
ASSIGN (262) 30 45 75
COMMA (263) 18 28 46 76
DIV (264) 50 80
EQ (265) 57 87
GE (266) 60 90
GT (267) 62 92
LBRACE (268) 9 10 33 34 40
LE (269) 59 89
LPAR (270) 16 35 36 37 66 67 72 73 74 96 97 102 103 104
LT (271) 61 91
MINUS (272) 48 64 78 94
MOD (273) 51 81
NE (274) 58 88
NOT (275) 65 95
OR (276) 52 82
PLUS (277) 47 63 77 93
RBRACE (278) 9 10 33 34 40
RPAR (279) 16 35 36 37 66 67 72 73 74 96 97 102 103 104
SEMI (280) 15 21 22 31 32 38 39 42
CHAR (281) 23
ELSE (282) 36
WHILE (283) 37
IF (284) 35 36
INT (285) 24
SHORT (286) 26
DOUBLE (287) 27
RETURN (288) 38 39
VOID (289) 25
REALLIT (290) 71 101
INTLIT (291) 69 99
RESERVED (292)
ID (293) 16 19 29 30 66 67 68 73 96 97 98 103
CHRLIT (294) 70 100
MUL (295) 49 79
NO_ELSE (296)
MAX_PREC (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
FunctionsAndDeclarations (45)
    on left: 2 3 4 5 6 7, on right: 1 5 6 7
FunctionDefinition (46)
    on left: 8, on right: 2 5
FunctionBody (47)
    on left: 9 10, on right: 8
DeclarationsAndStatements (48)
    on left: 11 12 13 14, on right: 9 11 12
FunctionDeclaration (49)
    on left: 15, on right: 3 6
FunctionDeclarator (50)
    on left: 16, on right: 8 15
ParameterList (51)
    on left: 17, on right: 16
ParameterDeclaration (52)
    on left: 18 19 20, on right: 17 18
Declaration (53)
    on left: 21 22, on right: 4 7 12 14
TypeSpec (54)
    on left: 23 24 25 26 27, on right: 8 15 19 20 21
Declarator (55)
    on left: 28 29 30, on right: 21 28
Statement (56)
    on left: 31 32 33 34 35 36 37 38 39 40, on right: 11 13 41
ErrorOrStatement (57)
    on left: 41 42, on right: 35 36 37 43 44
Statlist (58)
    on left: 43 44, on right: 33 43
Expr (59)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    63 64 65 66 67 68 69 70 71 72 73 74, on right: 30 31 35 36 37 38
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    72 102
ExprOnCall (60)
    on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
    93 94 95 96 97 98 99 100 101 102 103 104, on right: 67 75 76 77
    78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 97


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   22 Declaration: error . SEMI

    SEMI  shift, and go to state 13


State 2

   23 TypeSpec: CHAR .

    $default  reduce using rule 23 (TypeSpec)


State 3

   24 TypeSpec: INT .

    $default  reduce using rule 24 (TypeSpec)


State 4

   26 TypeSpec: SHORT .

    $default  reduce using rule 26 (TypeSpec)


State 5

   27 TypeSpec: DOUBLE .

    $default  reduce using rule 27 (TypeSpec)


State 6

   25 TypeSpec: VOID .

    $default  reduce using rule 25 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 8

    1 Program: FunctionsAndDeclarations .
    5 FunctionsAndDeclarations: FunctionsAndDeclarations . FunctionDefinition
    6                         | FunctionsAndDeclarations . FunctionDeclaration
    7                         | FunctionsAndDeclarations . Declaration

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (Program)

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    Declaration          go to state 17
    TypeSpec             go to state 12


State 9

    2 FunctionsAndDeclarations: FunctionDefinition .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration .

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 11

    4 FunctionsAndDeclarations: Declaration .

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 12

    8 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   21 Declaration: TypeSpec . Declarator SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarator          go to state 20


State 13

   22 Declaration: error SEMI .

    $default  reduce using rule 22 (Declaration)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition .

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration .

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration .

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   29 Declarator: ID .
   30           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 29 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 20

   21 Declaration: TypeSpec Declarator . SEMI
   28 Declarator: Declarator . COMMA Declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 21

   30 Declarator: ID ASSIGN . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 36


State 22

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 37
    ParameterDeclaration  go to state 38
    TypeSpec              go to state 39


State 23

    9 FunctionBody: LBRACE . DeclarationsAndStatements RBRACE
   10             | LBRACE . RBRACE

    error    shift, and go to state 1
    LBRACE   shift, and go to state 40
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 41
    SEMI     shift, and go to state 42
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 45
    VOID     shift, and go to state 6
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    DeclarationsAndStatements  go to state 46
    Declaration                go to state 47
    TypeSpec                   go to state 48
    Statement                  go to state 49
    Expr                       go to state 50


State 24

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 25

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 8 (FunctionDefinition)


State 26

   28 Declarator: Declarator COMMA . Declarator

    ID  shift, and go to state 51

    Declarator  go to state 52


State 27

   21 Declaration: TypeSpec Declarator SEMI .

    $default  reduce using rule 21 (Declaration)


State 28

   72 Expr: LPAR . Expr RPAR
   74     | LPAR . error RPAR

    error    shift, and go to state 53
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 54


State 29

   64 Expr: MINUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 55


State 30

   65 Expr: NOT . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 56


State 31

   63 Expr: PLUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 57


State 32

   71 Expr: REALLIT .

    $default  reduce using rule 71 (Expr)


State 33

   69 Expr: INTLIT .

    $default  reduce using rule 69 (Expr)


State 34

   66 Expr: ID . LPAR RPAR
   67     | ID . LPAR ExprOnCall RPAR
   68     | ID .
   73     | ID . LPAR error RPAR

    LPAR  shift, and go to state 58

    $default  reduce using rule 68 (Expr)


State 35

   70 Expr: CHRLIT .

    $default  reduce using rule 70 (Expr)


State 36

   30 Declarator: ID ASSIGN Expr .
   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr

    BITWISEAND  shift, and go to state 59
    BITWISEOR   shift, and go to state 60
    BITWISEXOR  shift, and go to state 61
    AND         shift, and go to state 62
    ASSIGN      shift, and go to state 63
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75
    MUL         shift, and go to state 76

    $default  reduce using rule 30 (Declarator)


State 37

   16 FunctionDeclarator: ID LPAR ParameterList . RPAR

    RPAR  shift, and go to state 77


State 38

   17 ParameterList: ParameterDeclaration .
   18 ParameterDeclaration: ParameterDeclaration . COMMA ParameterDeclaration

    COMMA  shift, and go to state 78

    $default  reduce using rule 17 (ParameterList)


State 39

   19 ParameterDeclaration: TypeSpec . ID
   20                     | TypeSpec .

    ID  shift, and go to state 79

    $default  reduce using rule 20 (ParameterDeclaration)


State 40

   33 Statement: LBRACE . Statlist RBRACE
   34          | LBRACE . RBRACE
   40          | LBRACE . error RBRACE

    error    shift, and go to state 80
    LBRACE   shift, and go to state 40
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 81
    SEMI     shift, and go to state 42
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    RETURN   shift, and go to state 45
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Statement         go to state 82
    ErrorOrStatement  go to state 83
    Statlist          go to state 84
    Expr              go to state 50


State 41

   10 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 10 (FunctionBody)


State 42

   32 Statement: SEMI .

    $default  reduce using rule 32 (Statement)


State 43

   37 Statement: WHILE . LPAR Expr RPAR ErrorOrStatement

    LPAR  shift, and go to state 85


State 44

   35 Statement: IF . LPAR Expr RPAR ErrorOrStatement
   36          | IF . LPAR Expr RPAR ErrorOrStatement ELSE ErrorOrStatement

    LPAR  shift, and go to state 86


State 45

   38 Statement: RETURN . Expr SEMI
   39          | RETURN . SEMI

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    SEMI     shift, and go to state 87
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 88


State 46

    9 FunctionBody: LBRACE DeclarationsAndStatements . RBRACE
   11 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   12                          | DeclarationsAndStatements . Declaration

    error    shift, and go to state 1
    LBRACE   shift, and go to state 40
    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    RBRACE   shift, and go to state 89
    SEMI     shift, and go to state 42
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 43
    IF       shift, and go to state 44
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 45
    VOID     shift, and go to state 6
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Declaration  go to state 90
    TypeSpec     go to state 48
    Statement    go to state 91
    Expr         go to state 50


State 47

   14 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 14 (DeclarationsAndStatements)


State 48

   21 Declaration: TypeSpec . Declarator SEMI

    ID  shift, and go to state 51

    Declarator  go to state 20


State 49

   13 DeclarationsAndStatements: Statement .

    $default  reduce using rule 13 (DeclarationsAndStatements)


State 50

   31 Statement: Expr . SEMI
   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr

    BITWISEAND  shift, and go to state 59
    BITWISEOR   shift, and go to state 60
    BITWISEXOR  shift, and go to state 61
    AND         shift, and go to state 62
    ASSIGN      shift, and go to state 63
    COMMA       shift, and go to state 64
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75
    SEMI        shift, and go to state 92
    MUL         shift, and go to state 76


State 51

   29 Declarator: ID .
   30           | ID . ASSIGN Expr

    ASSIGN  shift, and go to state 21

    $default  reduce using rule 29 (Declarator)


State 52

   28 Declarator: Declarator . COMMA Declarator
   28           | Declarator COMMA Declarator .

    $default  reduce using rule 28 (Declarator)


State 53

   74 Expr: LPAR error . RPAR

    RPAR  shift, and go to state 93


State 54

   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr
   72     | LPAR Expr . RPAR

    BITWISEAND  shift, and go to state 59
    BITWISEOR   shift, and go to state 60
    BITWISEXOR  shift, and go to state 61
    AND         shift, and go to state 62
    ASSIGN      shift, and go to state 63
    COMMA       shift, and go to state 64
    DIV         shift, and go to state 65
    EQ          shift, and go to state 66
    GE          shift, and go to state 67
    GT          shift, and go to state 68
    LE          shift, and go to state 69
    LT          shift, and go to state 70
    MINUS       shift, and go to state 71
    MOD         shift, and go to state 72
    NE          shift, and go to state 73
    OR          shift, and go to state 74
    PLUS        shift, and go to state 75
    RPAR        shift, and go to state 94
    MUL         shift, and go to state 76


State 55

   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr
   64     | MINUS Expr .

    $default  reduce using rule 64 (Expr)


State 56

   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr
   65     | NOT Expr .

    $default  reduce using rule 65 (Expr)


State 57

   45 Expr: Expr . ASSIGN Expr
   46     | Expr . COMMA Expr
   47     | Expr . PLUS Expr
   48     | Expr . MINUS Expr
   49     | Expr . MUL Expr
   50     | Expr . DIV Expr
   51     | Expr . MOD Expr
   52     | Expr . OR Expr
   53     | Expr . AND Expr
   54     | Expr . BITWISEAND Expr
   55     | Expr . BITWISEOR Expr
   56     | Expr . BITWISEXOR Expr
   57     | Expr . EQ Expr
   58     | Expr . NE Expr
   59     | Expr . LE Expr
   60     | Expr . GE Expr
   61     | Expr . LT Expr
   62     | Expr . GT Expr
   63     | PLUS Expr .

    $default  reduce using rule 63 (Expr)


State 58

   66 Expr: ID LPAR . RPAR
   67     | ID LPAR . ExprOnCall RPAR
   73     | ID LPAR . error RPAR

    error    shift, and go to state 95
    LPAR     shift, and go to state 96
    MINUS    shift, and go to state 97
    NOT      shift, and go to state 98
    PLUS     shift, and go to state 99
    RPAR     shift, and go to state 100
    REALLIT  shift, and go to state 101
    INTLIT   shift, and go to state 102
    ID       shift, and go to state 103
    CHRLIT   shift, and go to state 104

    ExprOnCall  go to state 105


State 59

   54 Expr: Expr BITWISEAND . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 106


State 60

   55 Expr: Expr BITWISEOR . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 107


State 61

   56 Expr: Expr BITWISEXOR . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 108


State 62

   53 Expr: Expr AND . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 109


State 63

   45 Expr: Expr ASSIGN . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 110


State 64

   46 Expr: Expr COMMA . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 111


State 65

   50 Expr: Expr DIV . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 112


State 66

   57 Expr: Expr EQ . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 113


State 67

   60 Expr: Expr GE . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 114


State 68

   62 Expr: Expr GT . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 115


State 69

   59 Expr: Expr LE . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 116


State 70

   61 Expr: Expr LT . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 117


State 71

   48 Expr: Expr MINUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 118


State 72

   51 Expr: Expr MOD . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 119


State 73

   58 Expr: Expr NE . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 120


State 74

   52 Expr: Expr OR . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 121


State 75

   47 Expr: Expr PLUS . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 122


State 76

   49 Expr: Expr MUL . Expr

    LPAR     shift, and go to state 28
    MINUS    shift, and go to state 29
    NOT      shift, and go to state 30
    PLUS     shift, and go to state 31
    REALLIT  shift, and go to state 32
    INTLIT   shift, and go to state 33
    ID       shift, and go to state 34
    CHRLIT   shift, and go to state 35

    Expr  go to state 123


State 77

   16 FunctionDeclarator: ID LPAR ParameterList RPAR .

    $default  reduce using rule 16 (FunctionDeclarator)


State 78

   18 ParameterDeclaration: ParameterDeclaration COMMA . ParameterDeclaration

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterDeclaration  go to state 124
    TypeSpec              go to state 39


State 79
